# CultClassic

./: README.md  pyproject.toml  setup.py
data/: datasets.py
execute/: test.py  train.py
models/: neuralNetwork.py
scripts/: test.py  testNuser.py  train.py
scripts/savedWeights/: final_model.pth  model_epoch_10.pth  model_epoch_15.pth  model_epoch_20.pth  model_epoch_5.pth
utils/: eval.py  recommend.py
